# 8086-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  sandbox.cpp  test_main.cpp
__refactor/include/: emulator.h  emulator_utils.h  init_core.h
__refactor/src/: emulator.cpp  init_core.cpp  opcode.cpp
cmake/: CompilerOptions.cmake  DetectOS.cmake
data/: 01_one_move_inst.asm  03_more_complicated_move_inst.asm  04_challange_move_inst.asm  04_challenge_move_inst.asm  05_add_sub_cmp_jnz.asm  06_combination.asm  06_completionsit_decode.asm  06_simple_mov_sim.asm  06_simple_mov_sim.out.txt  07_memory_to_register_sim.asm  07_register_to_register_sim.out.txt  08_half_register_movs.asm  08_half_register_movs.out.txt  09_carry_and_sign_flags.asm  09_carry_and_sign_flags.out.txt  09_segment_registers.asm  10.more_flags.asm  10_more_flags.out.txt  11_ip_basic.asm  11_ip_basic.out.txt  12_ip_loop.asm  12_ip_loop.out.txt  13_ip_bonus.asm  13_ip_bonus.out.txt  14_basic_memory_addressing.asm  14_basic_memory_addressing.out.txt  15_loop_memory_addressing.asm  15_loop_memory_addressing.out.txt  16_challange_memory_addressing.asm  17_image_gen_program.asm  18_image_gen_with_boarder.asm  test_01_from_01_to_05.asm
data/my_examples/: 01_mov_segment_registers.asm  02_low_and_hi_operations.asm  03_memory_addressing.asm  04_accumulators.asm
data/test_files_for_decoding/: 03_more_complicated_move_inst.asm  04_challange_move_inst.asm
include/: decoder.h  emulator.h  init_core.h  logger.h  opcodes.h  utils.h
scripts/: compile_asm_into_build_dir.sh  test_decoder.sh
src/: decoder.cpp  emulator.cpp  emulator.h  emulator_utils.cpp  emulator_utils.h  init_core.cpp  init_core.h  inst_8086.cpp  inst_8086.h  logger.cpp  mod.h  mov.cpp  mov.h  opcode.cpp  opcode.h  opcodes.cpp  utils.cpp  utils.h
test/: run_tests.cpp
tests/: t-decoder.cpp  t-emulator.cpp  t-index.cpp  t-index.h
